--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "react-typescript",
-  "version": "1.0.0",
-  "description": "React and TypeScript example starter project",
+  "name": "umbot-chat",
+  "version": "0.1.0",
+  "description": "Universal chat for run Alise scills or other voice assistants on the web site",
   "keywords": [
-    "typescript",
-    "react",
-    "starter"
+    "chat",
+    "site",
+    "dialog"
   ],
+  "author": "Maxim-M",
+  "license": "MIT",
   "main": "src/index.tsx",
   "dependencies": {
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
     "components": "0.1.0",
-    "react": "18.0.0",
+    "react": "^18.0.0",
     "react-dom": "18.0.0",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "typescript": "4.4.2"
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
