--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "components": "0.1.0",
     "react": "^18.0.0",
     "react-dom": "18.0.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
