--- a/package.json
+++ b/package.json
@@ -1,33 +1,54 @@
 {
-  "name": "umbot-chat",
-  "version": "0.2.0",
-  "description": "Universal chat for run Alise scills or other voice assistants on the web site",
+  "name": "umchat",
+  "version": "0.3.0",
+  "description": "Universal chat for run Alise skills or other voice assistants on the web site",
   "keywords": [
     "chat",
     "site",
-    "dialog"
+    "dialog",
+    "react"
   ],
   "author": "Maxim-M",
   "license": "MIT",
-  "main": "src/index.tsx",
   "dependencies": {
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
-    "components": "0.1.0",
-    "react": "^18.0.0",
-    "react-dom": "18.0.0",
-    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "typescript": "^4.4.2"
+    "rollup": "^3.10.0",
+    "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "typescript": "^4.9.4"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "18.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "build": "npm rollup | npm publish"
+  },
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
+
+  "bugs": {
+    "url": "https://github.com/max36895/universal_bot-chat/issues"
+  },
+  "engines": {
+    "node": ">=15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/max36895/universal_bot-chat.git"
   },
   "browserslist": [
     ">0.2%",
